[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[profile.release]
lto = true
codegen-units = 1
debug = true
panic = "abort"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
array-init = "2"
regex = "1"
jemallocator = "0.5"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false
